# Snac-Underflow

./: CMakeLists.txt  README.md  run_sharded_model.py
sharding/: shard_full_model.py
sharding/shardones/: layer_000.pt  layer_001.pt  layer_002.pt  layer_003.pt  layer_004.pt  layer_005.pt  layer_006.pt  layer_007.pt  layer_008.pt  layer_009.pt  layer_010.pt  layer_011.pt  layer_012.pt  layer_013.pt  layer_014.pt  layer_015.pt  layer_016.pt  layer_017.pt  layer_018.pt  layer_019.pt  layer_020.pt  layer_021.pt  layer_022.pt  layer_023.pt  layer_024.pt  layer_025.pt  layer_026.pt  layer_027.pt  layer_028.pt  layer_029.pt  layer_030.pt  layer_031.pt  layer_032.pt  layer_033.pt  layer_034.pt  layer_035.pt  layer_036.pt  layer_037.pt  layer_038.pt  layer_039.pt  (+7 more)
sharding/shards_out/: manifest.json  shard_001.pt  shard_002.pt  shard_003.pt  shard_004.pt  shard_005.pt  shard_006.pt  shard_007.pt  shard_008.pt  shard_009.pt  shard_010.pt  shard_011.pt  shard_012.pt  shard_013.pt  shard_014.pt  shard_015.pt  shard_017.pt  shard_018.pt  shard_020.pt  shard_021.pt  shard_022.pt  shard_023.pt  shard_024.pt  shard_025.pt  shard_026.pt  shard_027.pt
src/: CMakeLists.txt  demo.cpp  logger.cpp  logger.h  prefetcher.cpp  prefetcher.h  scheduler.cpp  scheduler.h  simple_kernel.cu  simple_kernel.cuh  simple_kernel.h  vgmm_controller.cpp  vgmm_controller.h
